<resources>
    <string name="app_name">GithubUserApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="searching_for">Searching for \"%1s\"</string>
    <string name="search_user">Search user</string>
    <string name="no_favorite_user">Currently you don\'t have any favorite user.</string>
    <string name="favorite_user">Favorite User</string>
    <string name="change_language">Change language</string>
    <string name="notifications">Notifications</string>
    <string name="bio">Bio</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="favorite_success_added">Successfully added to favorite!</string>
    <string name="favorite_success_deleted">Successfully removed to favorite!</string>
    <string name="loading">Loading…</string>
    <string name="add_user_favorite">Add the user to favorite</string>
    <string name="at_09_00_am">At 09:00 AM</string>
    <string name="daily_reminder">Daily Reminder</string>
</resources>