<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/github_nav_graph.xml"
    app:startDestination="@id/nav_favorite">

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.tapaafandi.githubuserapp.presentation.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/nav_search"
        android:name="com.tapaafandi.githubuserapp.presentation.ui.search.SearchUserFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search_user" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.tapaafandi.githubuserapp.presentation.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>