<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.detail_user.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivUserImage"
                        android:layout_width="131dp"
                        android:layout_height="131dp"
                        android:layout_gravity="center_vertical"
                        tools:src="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvName"
                            style="@style/textAppearanceHeadline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@+id/ivUserImage"
                            app:layout_constraintTop_toTopOf="@+id/ivUserImage"
                            tools:text="Mustafa Afandi" />

                        <TextView
                            android:id="@+id/tvUsername"
                            style="@style/textAppearanceSubtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="16dp"
                            tools:text="tapaafandi" />

                        <LinearLayout
                            android:id="@+id/llCompany"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/ivCompany"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_business" />

                            <TextView
                                android:id="@+id/tvCompany"
                                style="@style/textAppearanceSubtitle2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="16dp"
                                tools:text="Google" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/ivLocation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_place" />

                            <TextView
                                android:id="@+id/tvLocation"
                                style="@style/textAppearanceSubtitle2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="16dp"
                                tools:text="Bandung" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/textAppearanceSubtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio" />

                    <TextView
                        android:id="@+id/tvBio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/textAppearanceCaption"
                        tools:text="Ini adalah bio ku!" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/white_corner_background"
                    android:elevation="3dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tvRepository"
                            style="@style/textAppearanceHeadline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            tools:text="109" />

                        <TextView
                            style="@style/textAppearanceSubtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/repository" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tvFollowers"
                            style="@style/textAppearanceHeadline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            tools:text="109" />

                        <TextView
                            style="@style/textAppearanceSubtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/followers" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tvFollowing"
                            style="@style/textAppearanceHeadline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            tools:text="109" />

                        <TextView
                            style="@style/textAppearanceSubtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/following" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlFollowingFollowers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/secondaryBlack"
            app:tabSelectedTextColor="@color/primaryBlack"
            app:tabTextColor="@color/colorGrey" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbFavoriteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="bottom"
        android:src="@drawable/ic_favorite_border"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        app:tint="@color/primaryWhite"
        android:backgroundTint="@color/secondaryBlack"
        android:contentDescription="@string/add_user_favorite" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpFollowingFollowers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>